Update APIs doc
