# swagger.yaml
@@ -435,6 +435,10 @@ paths:
           description: The maximum price of books
           type: integer
           minimum: 0
+        - name: category
+          in: query
+          description: Find book has this CategoryID
+          type: string
         - name: limit
           in: query
           description: The maximum number of books to retrieve
@@ -506,6 +510,7 @@ paths:
         - name: body
           in: body
           description: Data to update
+          required: true
           schema:
             type: object
             properties:
@@ -540,7 +545,296 @@ paths:
         "200":
           description: Update successfully
                 
+  /book/delete/{id}:
+    delete:
+      tags:
+        - Book
+      summary: Delete a book by ID
+      description: Returns status of delete request
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: _Bearer 'access token'_
+        - name: id
+          in: path
+          description: Book ID
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Delete successfully an returns status true
+          schema:
+            type: object
+            properties:
+              status:
+                type: boolean
+                example: true
+              message:
+                type: string
+                example: Deleted 1 books
+        "400":
+          description: Delete failed with an error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
                 
+  # Category
+  /category:
+    get:
+      tags:
+        - Category
+      summary: Gets a list categories
+      description: Returns a list of categories. Default limit = 50 and frame = 1
+      parameters:
+        - name: limit
+          in: query   
+          type: integer
+          description: The number of categories to retrieve
+          minimum: 1
+        - name: frame
+          in: query
+          type: integer
+          minimum: 1
+          description: The page number to retrieve
+      responses:
+        "200":
+          description: Query successfully
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                description: Success message
+                example: Get categories successfully
+              data:
+                type: array
+                description: A list of categories
+                items:
+                  $ref: "#definitions/CategoryInfo"
+        "500":
+          description: Server Internal Error
+
+  /category/create:
+    post:
+      tags:
+        - Category
+      summary: Create a category
+      description: Create and return information about the newly created category
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: _Bearer 'access token'
+          type: string
+        - name: body
+          in: body
+          required: true
+          description: Data to create category
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                description: The unique category name
+                example: Shirt
+              description:
+                type: string
+                description: Category description
+                example: This is a description
+      responses:
+        "201":
+          description: Create successfully
+          schema:
+            type: object
+            properties:
+              status: 
+                type: boolean
+                example: true
+              message:
+                type: string
+                example: Create category successfully
+              data:
+                $ref: "#definitions/CategoryInfo"
+        "400":
+          description: Create failed with an error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
+        "500":
+          description: Server Internal Error
+        
+  /category/update:
+    patch:
+      tags:
+        - Category
+      summary: Update category
+      description: Update and return the new info
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          type: string
+          description: _Bearer 'token'
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              categoryId:
+                type: string
+                description: Category ID on the system
+                required: true
+              name:
+                type: string
+                description: New name
+                required: true
+              description:
+                type: string
+                description: New description
+      responses:
+        "200":
+          description: Update successfully
+          schema:
+            type: object
+            properties:
+              status:
+                type: boolean
+                example: true
+              message:
+                type: string
+                example: Update category successfully
+              data:
+                $ref: "#definitions/CategoryInfo"
+        "400":
+          description: Update failed with error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
+        "500":
+          description: Server Internal Error
+
+  /category/delete/{id}:
+    delete:
+      tags:
+        - Category
+      summary: Delete a category by ID
+      description: Delete a category by ID
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          type: string
+          description: _Bearer 'token'
+        - name: id
+          in: path
+          description: Category ID
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Delete category successfully
+        "400":
+          description: Delete failed with error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
+
+  # Order
+  /order/create:
+    post:
+      tags:
+        - Order
+      summary: Create an order
+      description: Create an order
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: _Bearer 'token'_ 
+          type: string
+        - name: body
+          in: body
+          description: Data to create an order
+          schema:
+            type: object
+            properties:
+              items:
+                type: array
+                description: An array contains objects.
+                items:
+                  type: object
+                  properties:
+                    productId:
+                      type: string
+                      description: Book ID
+                    quantity:
+                      type: integer
+                      description: The number of products
+                      minimum: 1
+      responses:
+        "201":
+          description: Create an order successfully
+          schema:
+            $ref: "#definitions/OrderInfo"
+        "400":
+          description: Create failed with error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
+        "404":
+          description: Products not found
+                    
+  /order/update-status:
+    put:
+      tags:
+        - Order
+      summary: Update order status
+      description: Admin update status
+      security:
+        - Bearer: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: _Bearer 'token'_
+          type: string
+        - name: body
+          in: body
+          required: true
+          description: Data to update order status
+          required: true
+          schema:
+            type: object
+            properties:
+              orderId:
+                type: string
+                description: Order ID
+              status:
+                type: string
+                description: Status value will be updated
+                enum: [Pending, Processing, Shipped, Delivered]
+      responses:
+        "200":
+          description: Update successfully
+        "400":
+          description: Update failed with error message
+        "401":
+          description: Not authenticated
+        "403":
+          description: Not authorized
+
+
 
 definitions:
   UserInfo:
@@ -630,4 +924,73 @@ definitions:
         items:
           type: string
           example: Image URL
-
+  CategoryInfo:
+    type: object
+    properties:
+      _id:
+        type: string
+        description: The category ID on the system
+      name:
+        type: string
+        description: Category name
+        example: Shirt
+      description: 
+        type: string
+        description: Category description
+        example: This is a shirt description
+  OrderInfo:
+    type: object
+    properties:
+      _id:
+        type: string
+        description: The order ID
+      customer:
+        type: string
+        description: The customer ID
+      items:
+        type: array
+        description: The list of object which has products
+        items:
+          type: object
+          properties:
+            product:
+              type: object
+              properties:
+                _id:
+                  type: string
+                  description: The book ID
+                name: 
+                  type: string
+                  description: Book name
+                publisher:
+                  type: string
+                  description: Publisher of the book
+                author: 
+                  type: string
+                  description: Author of the book
+                description:
+                  type: string
+                  description: Book description
+                price:
+                  type: integer
+                  description: Price of each book
+            quantity:
+              type: integer
+              description: The number of books
+            cost:
+              type: integer
+              description: Total cost of this book type
+      totalCost:
+        type: integer
+        description: Total order cost
+      status:
+        type: string
+        description: Status of order
+      createdAt:
+        type: string
+        description: The time which order was created
+        format: date-time
+      updatedAt:
+        type: string
+        description: The time which order was updated
+        format: date-time
